added server synced custom value yml file

--- a/SeasonalTweaks/SeasonalTweaks.csproj
+++ b/SeasonalTweaks/SeasonalTweaks.csproj
@@ -114,10 +114,10 @@
         <Compile Include="Tweaks\BeeHivePatch.cs" />
         <Compile Include="Tweaks\Destructible.cs" />
         <Compile Include="Tweaks\Farming.cs" />
+        <Compile Include="Tweaks\Fish.cs" />
         <Compile Include="Tweaks\GetSkill.cs" />
         <Compile Include="Tweaks\Pickables.cs" />
         <Compile Include="Tweaks\SeasonalItems.cs" />
-        <Compile Include="Tweaks\SeasonalSpawns.cs" />
         <Compile Include="Tweaks\SeasonKeys.cs" />
         <Compile Include="Tweaks\YamlConfigurations.cs" />
         <Compile Include="VersionHandshake.cs" />
@@ -132,7 +132,6 @@
         <Content Include="Libs\ServerSync.dll">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
-        <EmbeddedResource Include="translations\English.yml" />
         <Content Include="UpdateManifest.ps1" />
     </ItemGroup>
     <ItemGroup>
